[package]
name = "shash"
version = "0.1.0"
edition = "2021"
authors = ["Spheniscine"]
license = "MIT OR Apache-2.0"
description = "An arbitrary-length-input hash function for competitive programming and experimental purposes."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
